@@ -7,6 +7,10 @@
   - Slightly better error message when trying to use a mixin and you're
     not of the right class.
 
+  Documentation:
+  * Add copyright and license
+
+
 0.06  Wed Apr 18 10:08:59 PDT 2007
   Documentation:
   * Documented the behavior of SUPER
